fixing the spacing

--- a/css/main.css
+++ b/css/main.css
@@ -115,5 +115,5 @@ p {
 canvas {
   width: calc(50% - 20px);
   height: 225px;
-  margin-right: 20px;
+  margin-right: 40px;
 }
